--- a/DataRecognition/DataService.Tests/packages.config
+++ b/DataRecognition/DataService.Tests/packages.config
@@ -1,11 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.8.1" targetFramework="net471" />
-  <package id="Autofac.Extras.DynamicProxy" version="4.5.0" targetFramework="net471" />
-  <package id="Autofac.ServiceFabric" version="2.1.0" targetFramework="net471" />
-  <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric" version="6.4.624" targetFramework="net471" />
-  <package id="Microsoft.ServiceFabric.Actors" version="3.3.624" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric.Data" version="3.3.624" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric.Data.Extensions" version="1.4.624" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric.Data.Interfaces" version="3.3.624" targetFramework="net471" />
@@ -13,4 +8,6 @@
   <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="3.3.624" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric.Services" version="3.3.624" targetFramework="net471" />
   <package id="Microsoft.ServiceFabric.Services.Remoting" version="3.3.624" targetFramework="net471" />
+  <package id="NUnit" version="3.6.1" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net471" />
 </packages>
