--- a/DataRecognition/RecognitionService/RecognitionService.csproj
+++ b/DataRecognition/RecognitionService/RecognitionService.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="IronOcr">
-      <HintPath>..\..\..\dll\IronOcr.dll</HintPath>
+    <Reference Include="IronOcr, Version=4.4.0.21181, Culture=neutral, PublicKeyToken=5f366048dc436899, processorArchitecture=MSIL">
+      <HintPath>..\packages\IronOcr.4.4.0\lib\net40\IronOcr.dll</HintPath>
     </Reference>
     <Reference Include="IronOcr.Russian">
       <HintPath>..\..\..\dll\IronOcr.Russian.dll</HintPath>
@@ -51,6 +51,8 @@
     <Compile Include="RecognitionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
